[gd_scene load_steps=8 format=3 uid="uid://bpk5dwpugh1gf"]

[ext_resource type="PackedScene" uid="uid://mo48nbk7gxoj" path="res://modeles3d/ring.glb" id="1_kyqsy"]
[ext_resource type="Script" path="res://scenes/item/ring_oxy_bronze.gd" id="2_tnhb7"]
[ext_resource type="AudioStream" uid="uid://bt54qyg4uwvnj" path="res://sons/ring-drop-263966.wav" id="3_nt8yb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jbawk"]
albedo_color = Color(0.482333, 0.335893, 0.185642, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wjp2t"]
transparency = 1
albedo_color = Color(0.223529, 0.498039, 1, 0.980392)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_81odn"]
height = 0.555748
radius = 0.885508

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0pd1k"]
height = 1.39157
radius = 1.50393

[node name="ring_oxy_bronze" groups=["prehensible"] instance=ExtResource("1_kyqsy")]
script = ExtResource("2_tnhb7")

[node name="Cylindre" parent="." index="0"]
layers = 8
material_override = SubResource("StandardMaterial3D_jbawk")

[node name="Icosph√®re" parent="." index="1"]
layers = 8
material_override = SubResource("StandardMaterial3D_wjp2t")

[node name="interaction_area" type="Area3D" parent="." index="2" groups=["prehensible"]]
collision_layer = 8
collision_mask = 0

[node name="interaction_form" type="CollisionShape3D" parent="interaction_area" index="0" groups=["prehensible"]]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
shape = SubResource("CylinderShape3D_81odn")

[node name="Anneau de respiration en bronze" type="StaticBody3D" parent="." index="3" groups=["prehensible"]]
collision_layer = 8

[node name="body_collision2" type="CollisionShape3D" parent="Anneau de respiration en bronze" index="0"]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)
shape = SubResource("CylinderShape3D_0pd1k")

[node name="audio_pick" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("3_nt8yb")

[node name="Timer" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
